# swagger/swagger.yml
@@ -26,6 +26,9 @@ paths:
         200:
           description: List of payment details
           schema: {$ref: '#/definitions/PaymentDetailsListResponse'}
+        500:
+          description: Fatal error
+          schema: {$ref: '#/definitions/ApiError'}
       summary: List payments
     post:
       consumes: [application/vnd.api+json, application/json]
@@ -39,6 +42,9 @@ paths:
           schema: {$ref: '#/definitions/PaymentCreationResponse'}
         400:
           description: Payment creation error
+          schema: {$ref: '#/definitions/ApiError'}
+        500:
+          description: Fatal error
           schema: {$ref: '#/definitions/ApiError'}
       summary: Create payment
     patch:
@@ -56,6 +62,10 @@ paths:
         404:
           description: Payment update not found
           schema: {$ref: '#/definitions/ApiError'}
+        500:
+          description: Fatal error
+          schema: {$ref: '#/definitions/ApiError'}
+      summary: Patch payment
   /payments/{id}:
     get:
       parameters:
@@ -80,6 +90,7 @@ paths:
         404:
           description: Payment deletion error
           schema: {$ref: '#/definitions/ApiError'}
+      summary: Delete payment
 
 definitions:
   ApiError:
